@@ -1,0 +1,11 @@
+package st.redline.bootstrap;
+
+import st.redline.ProtoMethod;
+import st.redline.ProtoObject;
+
+public class ClassSubclassMethod extends ProtoMethod {
+	public ProtoObject applyTo(ProtoObject receiver, ProtoObject classMethodWasFoundIn, ProtoObject argument) {
+		System.out.println("ClassSubclassMethod applyTo() " + argument.javaValue());
+		return null;
+	}
+}
